--- a/index.html
+++ b/index.html
@@ -35,7 +35,19 @@
                         <img src="https://www.themoviedb.org/t/p/w500_and_h282_face/8AI8rkUmFSTYuaOx1fEFsNe6Eru.jpg" alt="Homem-Aranha-Sem-Volta">
                         <div class="dsmovie-card-description">
                             <h3>Homem-Aranha: Sem Volta Para Casa (2021)</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <div class="dsmovie-card-description-botton">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>10 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
+
                         </div> 
                     </div>
                 </div>
